feat: jquery validation 관련 설정 파일 추가

--- a/module-admin/src/main/resources/templates/layout/main.html
+++ b/module-admin/src/main/resources/templates/layout/main.html
@@ -131,6 +131,8 @@
 <script type="text/javascript" th:src="@{/files/assets/pages/advance-elements/select2-custom.js}"></script>
 <script type="text/javascript" th:src="@{/js/switches.js}"></script>
 <script type="text/javascript" th:src="@{/js/jquery-validation-1.19.5/dist/jquery.validate.js}"></script>
+<script type="text/javascript" th:src="@{/js/customJqueryValidationMethod.js}"></script>
+<script type="text/javascript" th:src="@{/js/customJqueryValidationSetting.js}"></script>
 <script type="text/javascript" th:src="@{/js/jquery.serializeObject.js}"></script>
 <script type="text/javascript" th:src="@{/js/adminCommon.js}"></script>
 <script type="text/javascript" th:src="@{/js/custom-design.js}"></script>
