--- a/module-admin/src/main/resources/templates/layout/header.html
+++ b/module-admin/src/main/resources/templates/layout/header.html
@@ -4,7 +4,7 @@
     <nav class="navbar header-navbar pcoded-header">
         <div class="navbar-wrapper">
             <div class="navbar-logo">
-                <a class="mobile-menu" href="#!">
+                <a class="mobile-menu" id="mobile-collapse" href="#!">
                     <img class="img-fluid" th:src="@{/files/assets/images/menu_open.png}" alt="Theme-Logo"/>
                 </a>
                 <a href="index.html">
@@ -18,13 +18,13 @@
             <div class="navbar-container">
                 <ul class="nav-left">
                     <li>
-                        <a href="#!" onclick="javascript:toggleFullScreen()" class="waves-effect waves-light">
+                        <a href="#!" onclick="javascript:fullScreen()" class="waves-effect waves-light">
                             <i class="full-screen feather icon-maximize"></i>
                         </a>
                     </li>
 
                     <li>
-                        <a href="javascript:void(0)" onclick="javascript:toggleFullScreen()" class="waves-effect waves-light"
+                        <a href="javascript:void(0)" onclick="javascript:fullScreen()" class="waves-effect waves-light"
                            style="font-size:14px; line-height:20px; color:#000">
                             전체화면 보기
                         </a>
@@ -59,5 +59,39 @@
             </div>
         </div>
     </nav>
+    <script>
+        function fullScreen() {
+            var a = $(window).height() - 10;
+            if (!document.fullscreenElement && // alternative standard method
+                !document.mozFullScreenElement && !document.webkitFullscreenElement) { // current working methods
+                if (document.documentElement.requestFullscreen) {
+                    document.documentElement.requestFullscreen();
+                } else if (document.documentElement.mozRequestFullScreen) {
+                    document.documentElement.mozRequestFullScreen();
+                } else if (document.documentElement.webkitRequestFullscreen) {
+                    document.documentElement.webkitRequestFullscreen(Element.ALLOW_KEYBOARD_INPUT);
+                }
+            } else {
+                if (document.cancelFullScreen) {
+                    document.cancelFullScreen();
+                } else if (document.mozCancelFullScreen) {
+                    document.mozCancelFullScreen();
+                } else if (document.webkitCancelFullScreen) {
+                    document.webkitCancelFullScreen();
+                }
+            }
+
+            document.addEventListener('fullscreenchange', exitHandler);
+            document.addEventListener('webkitfullscreenchange', exitHandler);
+            document.addEventListener('mozfullscreenchange', exitHandler);
+            document.addEventListener('MSFullscreenChange', exitHandler);
+        }
+
+        function exitHandler() {
+            $('.full-screen').toggleClass('icon-maximize');
+            $('.full-screen').toggleClass('icon-minimize');
+        }
+
+    </script>
 </th:block>
 </html>
