--- a/module-admin/src/main/resources/templates/member/tab/detail.html
+++ b/module-admin/src/main/resources/templates/member/tab/detail.html
@@ -1,4 +1,4 @@
-<form method="post" id="detailForm" name="detailForm">
+<form th:object="${memberDetail}" method="post" id="detailForm" name="detailForm" >
     <div class="card-header  p-b-0">
         <h3 class="sub-title"><strong>기본정보</strong></h3>
     </div>
@@ -6,74 +6,76 @@
         <div class="row">
             <div class="col-lg-6 mb-3">
                 <div class="row form-group required mb-3">
-                    <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for=""><strong>아이디</strong></label>
+                    <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for="email"><strong>아이디</strong></label>
                     <div class="col-sm-12">
-                        <input type="text" class="form-control form-control-sm form-control-round" placeholder="제목을 입력해주세요." readonly>
+                        <input type="text" class="form-control form-control-sm form-control-round" th:field="*{email}" readonly>
                     </div>
                 </div>
             </div>
             <div class="col-lg-6 mb-3">
-                <div class="row form-group required mb-3">
+                <div class="row form-group mb-3">
                     <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for=""><strong>가입수단</strong></label>
                     <div class="col-sm-12">
-                        <input type="text" class="form-control form-control-sm form-control-round" placeholder="제목을 입력해주세요." readonly>
+                        <input type="text" class="form-control form-control-sm form-control-round" th:field="*{signupMethod.value}" readonly>
                     </div>
                 </div>
             </div>
             <div class="col-lg-6 mb-3">
-                <div class="row form-group required mb-3">
-                    <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for=""><strong>비밀번호</strong></label>
+                <div class="row form-group mb-3">
+                    <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for="nickname"><strong>닉네임</strong></label>
                     <div class="col-sm-12">
-                        <input type="text" class="form-control form-control-sm form-control-round" placeholder="제목을 입력해주세요." readonly>
+                        <input type="text" class="form-control form-control-sm form-control-round" th:field="*{nickname}" >
                     </div>
                 </div>
             </div>
             <div class="col-lg-6 mb-3">
-                <div class="row form-group required mb-3">
-                    <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for=""><strong>닉네임</strong></label>
+                <div class="row form-group mb-3">
+                    <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" ><strong>회원상태</strong></label>
                     <div class="col-sm-12">
-                        <input type="text" class="form-control form-control-sm form-control-round" placeholder="제목을 입력해주세요." readonly>
+                        <select class="form-select form-control-round custom-select" th:field="*{status.value}">
+                            <option th:each="ms : ${memberStatus}" th:value="${ms.key}" th:text="${ms.value}">value</option>
+                        </select>
                     </div>
                 </div>
             </div>
             <div class="col-lg-6 mb-3">
-                <div class="row form-group required mb-3">
-                    <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for=""><strong>회원상태</strong></label>
+                <div class="row form-group mb-3">
+                    <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for="createdAt"><strong>회원가입일시</strong></label>
                     <div class="col-sm-12">
-                        <input type="text" class="form-control form-control-sm form-control-round" placeholder="제목을 입력해주세요." readonly>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-6 mb-3">
-                <div class="row form-group required mb-3">
-                    <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for=""><strong>회원가입일시</strong></label>
-                    <div class="col-sm-12">
-                        <input type="text" class="form-control form-control-sm form-control-round" placeholder="제목을 입력해주세요." readonly>
+                        <input type="datetime" class="form-control form-control-sm form-control-round" th:field="*{createdAt}" readonly>
 
                     </div>
                 </div>
             </div>
             <div class="col-lg-6 mb-3">
-                <div class="row form-group required mb-3">
-                    <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for=""><strong>최근접속일시</strong></label>
+                <div class="row form-group mb-3">
+                    <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for="lastLoggedAt"><strong>최근접속일시</strong></label>
                     <div class="col-sm-12">
-                        <input type="text" class="form-control form-control-sm form-control-round" placeholder="제목을 입력해주세요." readonly>
+                        <input type="datetime" class="form-control form-control-sm form-control-round" th:field="*{lastLoggedAt}" readonly>
                     </div>
                 </div>
             </div>
             <div class="col-lg-6 mb-3">
-                <div class="row form-group required mb-3">
-                    <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for=""><strong>휴면전환일시</strong></label>
+                <div class="row form-group mb-3">
+                    <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for="dormancyConvertedAt"><strong>휴면전환일시</strong></label>
                     <div class="col-sm-12">
-                        <input type="text" class="form-control form-control-sm form-control-round" placeholder="제목을 입력해주세요." readonly>
+                        <input type="datetime" class="form-control form-control-sm form-control-round" th:field="*{dormancyConvertedAt}" readonly>
                     </div>
                 </div>
             </div>
             <div class="col-lg-6 mb-3">
-                <div class="row form-group required mb-3">
-                    <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for=""><strong>회원탈퇴일시</strong></label>
+                <div class="row form-group mb-3">
+                    <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for="deletedAt"><strong>회원탈퇴일시</strong></label>
                     <div class="col-sm-12">
-                        <input type="text" class="form-control form-control-sm form-control-round" placeholder="제목을 입력해주세요." readonly>
+                        <input type="datetime" class="form-control form-control-sm form-control-round" th:field="*{deletedAt}" readonly>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3">
+                <div class="row form-group mb-3">
+                    <label class="form-label col-sm-12 col-form-label p-t-0 pb-1"><strong>비밀번호</strong></label>
+                    <div class="col-sm-12">
+                        <button type="button" class="btn btn-transparent" id="temporaryPasswordBtn">임시 비밀번호 발급</button>
                     </div>
                 </div>
             </div>
@@ -84,4 +86,16 @@
         <button type="button" class="btn btn-gray m-r-5" id="cancelBtn">취소</button>
         <button type="button" class="btn btn-primary" id="saveBtn">저장</button>
     </div>
+
+    <script type="text/javascript" th:src="@{/js/custom-design.js}"></script>
+    <script>
+        $(function(){
+            $('#temporaryPasswordBtn').on('click',function() {
+                if(confirm('임시 비밀번호를 발급하시겠습니까?')) {
+
+                }
+            })
+        })
+    </script>
+<!--    generateTemporaryPassword -->
 </form>
