--- a/module-admin/src/main/resources/templates/member/tab/detail.html
+++ b/module-admin/src/main/resources/templates/member/tab/detail.html
@@ -1,4 +1,5 @@
 <form th:object="${memberDetail}" method="post" id="detailForm" name="detailForm" >
+    <input type="hidden" name="id" id="id" th:value="${memberId}">
     <div class="card-header  p-b-0">
         <h3 class="sub-title"><strong>기본정보</strong></h3>
     </div>
@@ -24,7 +25,7 @@
                 <div class="row form-group mb-3">
                     <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for="nickname"><strong>닉네임</strong></label>
                     <div class="col-sm-12">
-                        <input type="text" class="form-control form-control-sm form-control-round" th:field="*{nickname}" >
+                        <input type="text" class="form-control form-control-round" th:field="*{nickname}" >
                     </div>
                 </div>
             </div>
@@ -32,7 +33,7 @@
                 <div class="row form-group mb-3">
                     <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" ><strong>회원상태</strong></label>
                     <div class="col-sm-12">
-                        <select class="form-select form-control-round custom-select" th:field="*{status.value}">
+                        <select class="form-select form-control form-control-round custom-select" th:field="*{status.value}">
                             <option th:each="ms : ${memberStatus}" th:value="${ms.key}" th:text="${ms.value}">value</option>
                         </select>
                     </div>
@@ -95,6 +96,16 @@
 
                 }
             })
+
+            $('#saveBtn').on('click', function () {
+                if (!$('#nickname').val()) {
+                    alert('닉네임을 입력해 주십시오.');
+                } else {
+                    $.ajax({
+                        method:'patch',
+                    })
+                }
+            });
         })
     </script>
 <!--    generateTemporaryPassword -->
